--- a/book.html
+++ b/book.html
@@ -166,7 +166,7 @@
         ${name}
       `;
 
-      var mailtoLink = 'mailto:example@example.com?subject=Förfrågan från ' + encodeURIComponent(name) + ' om "' + encodeURIComponent(service) + '"' + '&body=' + encodeURIComponent(emailBody);
+      var mailtoLink = 'mailto:swedishtransportservices@gmail.com?subject=Förfrågan från ' + encodeURIComponent(name) + ' om "' + encodeURIComponent(service) + '"' + '&body=' + encodeURIComponent(emailBody);
 
       window.location.href = mailtoLink;
     });
