Updage the title, small style fix

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Limo Dark</title>
+  <title>Swedish Transport Service</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300|Open+Sans:400,800,700,300,600' rel='stylesheet'
     type='text/css'>
