--- a/skolresor.html
+++ b/skolresor.html
@@ -150,14 +150,17 @@
     <div class="footer-widget">
       <div class="container">
         <div class="row">
-          <div class="col-md-3 col-sm-6">
+          <div class="col-md-6 col-sm-6">
             <div class="widget">
               <h2 class="rounded">About Us</h2>
-              <p>Welcome to LIMO, specializing in car rental service. Through integrity & professionalism, we craft
-                enduring value & relationship.</p>
+              <p>välkommen till Swedish Transport Service, Med en kombination av personligt engagemang, flexibilitet och
+                djupgående kunskap strävar vi efter att
+                erbjuda skräddarsydda busstransporter som motsvarar precis era önskemål. Vår omtanke om varje detalj
+                säkerställer en resa som inte bara uppfyller, utan överträffar era förväntningar. Välkomna till en
+                transportupplevelse där varje resa är unik och skapad med omsorg.</p>
             </div>
           </div>
-          <div class="col-md-3 col-sm-6">
+          <div class="col-md-6 col-sm-6">
             <div class="widget">
               <h2 class="rounded">Contact Us</h2>
               <div class="list-items">
@@ -167,7 +170,7 @@
                       <i class="icon ion-ios-location-outline"></i>
                     </span>
                     <span class="mm-small-box">
-                      172 North 14th Street,<br> Office 503 New York NY 10010
+                      Stockholm,<br> Solna
                     </span>
                   </li>
                   <li>
@@ -175,7 +178,7 @@
                       <i class="icon ion-ios-email-outline"></i>
                     </span>
                     <span class="mm-small-box">
-                      contact@earththeme.com<br> support@earththeme.com
+                      swedishtransportservises@gmail.com<br>swedishtransportservises
                     </span>
                   </li>
                   <li>
@@ -183,47 +186,28 @@
                       <i class="icon ion-ios-telephone-outline"></i>
                     </span>
                     <span class="mm-small-box">
-                      Mobile : +1 234-567-890<br> Hotline : +1 234-567-890
+                      Mobile : +46 704-837-371<br> Hotline : +46 704-837-371
                     </span>
                   </li>
                 </ul>
               </div>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="contact-form">
-              <h2 class="rounded">Keep in touch with us</h2>
-              <form action="#" method="post">
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="input-box">
-                      <input type="text" name="name" class="form-control" placeholder="Your Name">
-                      <input type="text" name="email" class="form-control" placeholder="Your Email">
-                    </div>
-                  </div>
-                  <div class="col-md-6">
-                    <div class="textarea-box text-right">
-                      <textarea name="message" class="form-control" placeholder="Your Message"></textarea>
-                      <button type="submit" class="custom-btn">Send Message</button>
-                    </div>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
+
         </div>
       </div>
     </div><!-- /.footer-widget -->
     <div class="copyright dark-bg">
       <div class="container">
         <div class="copyright-text">
-          <p class="font-Montserrat margin-bottom-0"> &copy; Copyright 2016 - <a href="#" target="_blank">LIMUGUYS</a>
-            by EarthTheme. All rights reserved</p>
+          <p class="font-Montserrat margin-bottom-0"> &copy; Copyright 2024 - <a href="#" target="_blank">Swedish
+              Transport Service</a>
+            by STS. All rights reserved</p>
         </div>
         <div class="footer-menu">
           <ul>
             <li><a href="index.html">Hem</a></li>
-            <li><a href="about.html">Om oss</a></li>
+            <li><a href="about.html">Om Oss</a></li>
           </ul>
         </div>
       </div>
