change boka har to fyll I formularet har

--- a/book.html
+++ b/book.html
@@ -78,7 +78,7 @@
   <div class="limo-breatcume text-center text-uppercase">
     <div class="overlay padding-bottom100">
       <p>En smidig och bekväm resa</p>
-      <h2>BOKA BUSS</h2>
+      <h2>Fyll i formuläret här</h2>
     </div>
   </div>
   <!-- End of Limo breatcume -->
