--- a/sightseeing.html
+++ b/sightseeing.html
@@ -102,7 +102,7 @@
       </div>
 
       <div class="section-content text-center">
-        <h1><a style="font-size: 20px;" href="book.html" class="more-btn">BOKA BUSS</a></h1>
+        <h1><a style="font-size: 20px;" href="book.html" class="more-btn">Fyll i formuläret här</a></h1>
 
 
       </div>
