remove idrottsresor from gruppresor

--- a/arrangorer.html
+++ b/arrangorer.html
@@ -41,7 +41,7 @@
           <ul class="dropdown">
             <li><a href="vip.html">VIP</a></li>
             <li><a href="event.html">EVENT</a></li>
-            <li><a href="gruppidrottsresor.html">GRUPPRESOR: IDROTTSRESOR</a></li>
+            <li><a href="gruppidrottsresor.html">GRUPPRESOR</a></li>
             <li><a href="idrottsresor.html">IDROTTSRESOR</a></li>
             <li><a href="sightseeing.html">SIGHTSEEING</a></li>
             <li><a href="skolresor.html">SKOLRESOR</a></li>
