--- a/gruppidrottsresor.html
+++ b/gruppidrottsresor.html
@@ -40,7 +40,7 @@
           <ul class="dropdown">
             <li><a href="vip.html">VIP</a></li>
             <li><a href="event.html">EVENT</a></li>
-            <li><a href="gruppidrottsresor.html">GRUPPRESOR: IDROTTSRESOR</a></li>
+            <li><a href="gruppidrottsresor.html">GRUPPRESOR</a></li>
             <li><a href="idrottsresor.html">IDROTTSRESOR</a></li>
             <li><a href="sightseeing.html">SIGHTSEEING</a></li>
             <li><a href="skolresor.html">SKOLRESOR</a></li>
@@ -88,7 +88,7 @@
 
       <div class="section-head padding-bottom55 text-center wow fadeInUp animated" data-wow-duration=".8s"
         data-wow-delay="0.3s">
-        <h2> <span>GRUPPRESOR: IDROTTSRESOR</span></h2>
+        <h2> <span>GRUPPRESOR</span></h2>
         <p>Privat arrangemang eller företagsäventyr? Oavsett om det är för en privat tillställning eller för företagets
           nästa stora resa, skräddarsyr vi ert resande utifrån era unika förutsättningar. Att välja buss som
           transportmedel är inte bara socialt och ekonomiskt fördelaktigt, det är även ett val för miljön. När ni
