--- a/book.html
+++ b/book.html
@@ -41,7 +41,7 @@
           <ul class="dropdown">
             <li><a href="vip.html">VIP</a></li>
             <li><a href="event.html">EVENT</a></li>
-            <li><a href="gruppidrottsresor.html">GRUPPRESOR: IDROTTSRESOR</a></li>
+            <li><a href="gruppidrottsresor.html">GRUPPRESOR</a></li>
             <li><a href="idrottsresor.html">IDROTTSRESOR</a></li>
             <li><a href="sightseeing.html">SIGHTSEEING</a></li>
             <li><a href="skolresor.html">SKOLRESOR</a></li>
@@ -102,7 +102,7 @@
                   <option class="select-form-option" value="" disabled selected hidden>Välj en Service*</option>
                   <option class="select-form-option" value="VIP">VIP</option>
                   <option class="select-form-option" value="EVENT">EVENT</option>
-                  <option class="select-form-option" value="GRUPPRESOR: IDROTTSRESOR">GRUPPRESOR: IDROTTSRESOR</option>
+                  <option class="select-form-option" value="GRUPPRESOR">GRUPPRESOR</option>
                   <option class="select-form-option" value="IDROTTSRESOR">IDROTTSRESOR</option>
                   <option class="select-form-option" value="SIGHTSEEING">SIGHTSEEING</option>
                   <option class="select-form-option" value="SKOLRESOR">SKOLRESOR</option>
