Update the cutomer reviews

--- a/about.html
+++ b/about.html
@@ -145,23 +145,26 @@
         <div id="quote-slider">
           <div class="quote-text-wrap text-center">
             <div class="quote-info">
-              <p>“Lorem ipsum dolor sit amet, consectetur elit. Praesent nec risus vitae sem.”</p>
-              <a href="#" class="font-Montserrat">John Doe - Ceo,</a>
-              <span>Limo Corp</span>
+              <p>"Fantastisk upplevelse med Swedish Transport Service! Effektiv bokning, punktlig och vänlig förare.
+                Rekommenderas starkt för pålitliga resor i Sverige."</p>
+              <a href="#" class="font-Montserrat"> </a>
+              <span>Linnea</span>
             </div><!-- /.quote-info -->
           </div>
           <div class="quote-text-wrap text-center">
             <div class="quote-info">
-              <p>“Lorem ipsum dolor sit amet, consectetur elit. Praesent nec risus vitae sem.”</p>
-              <a href="#" class="font-Montserrat">John Doe - Ceo,</a>
-              <span>Limo Corp</span>
+              <p> "Toppenresa med Swedish Transport Service! Smidig bokning, i tid och trevlig chaufför. Starkt
+                rekommenderad för säkra transporter i Sverige."</p>
+              <a href="#" class="font-Montserrat"> </a>
+              <span>Erik</span>
             </div><!-- /.quote-info -->
           </div>
           <div class="quote-text-wrap text-center">
             <div class="quote-info">
-              <p>“Lorem ipsum dolor sit amet, consectetur elit. Praesent nec risus vitae sem.”</p>
-              <a href="#" class="font-Montserrat">John Doe - Ceo,</a>
-              <span>Limo Corp</span>
+              <p>"Utmärkt service från Swedish Transport Service! Snabb bokning, punktlighet och hjälpsam förare.
+                Rekommenderas varmt för trygga resor i Sverige."</p>
+              <a href="#" class="font-Montserrat"> </a>
+              <span>Sofia</span>
             </div><!-- /.quote-info -->
           </div>
         </div>
