add information to contact form

--- a/book.html
+++ b/book.html
@@ -87,7 +87,7 @@
   <section id="contact" class="contact-section section-padding">
     <div class="container">
       <div class="section-content">
-        <div class="col-md-7">
+        <div class="col-md-7 wow fadeInUp">
           <!-- Updated action attribute and added id to form -->
           <form id="contactForm" action="javascript:void(0);" method="post" enctype="text/plain">
             <div class="">
@@ -138,6 +138,19 @@
             </div>
           </form>
         </div>
+        <div class="col-md-5 wow fadeInUp" data-wow-duration=".8s" data-wow-delay="0.6s">
+          <div class="section-head text-center">
+            <h2><a href="book.html">Boka tjänster <span>hos oss</span></a></h2>
+            <!-- <h3 class="gray">eller</h3> -->
+            <p style="font-weight: 300; color: white; font-size: 18px; padding: 20px 0;">Fyll i formuläret så återkommer
+              vi till dig så
+              fort vi kan.
+              Skickar du din förfrågan vardagar innan kl 12.00 så får du svar samma dag. </p>
+            <h3 class="white" style="color: #3a6ee8">Du kan även ringa oss på</h3>&nbsp;
+            <h2><a style="color: #3a6ee8" href="tel: +46704837371">+46-704837371</a></h2>
+            <h3 class="white" style="color: #3a6ee8">och få svar direkt.</h3>&nbsp;
+          </div>
+        </div><!-- /.col-md-5 -->
         <!-- Additional content here -->
       </div>
     </div>
