--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <section id="contact" class="contact-section section-padding">
     <div class="container">
       <div class="section-content">
-        <div class="col-md-7 wow fadeInUp" data-wow-duration=".8s" data-wow-delay="0.4s">
+        <div class="col-md-7 wow fadeInUp">
           <form id="contactForm">
             <div class="input-box">
               <div class="col-md-6">
@@ -193,10 +193,15 @@
         </div><!-- /.col-md-7 -->
         <div class="col-md-5 wow fadeInUp" data-wow-duration=".8s" data-wow-delay="0.6s">
           <div class="section-head text-center">
-            <h2><a href="book.html">Boka <span>Buss</span></a></h2>
-            <h3 class="gray">eller</h3>
-            <h3 class="gray">KONTAKTA OSS</h3>&nbsp;
-            <h2><a style="color: white" href="tel: +46704837371">+46-704837371</a></h2>
+            <h2><a href="book.html">Boka tjänster <span>hos oss</span></a></h2>
+            <!-- <h3 class="gray">eller</h3> -->
+            <p style="font-weight: 300; color: white; font-size: 18px; padding: 20px 0;">Fyll i formuläret så återkommer
+              vi till dig så
+              fort vi kan.
+              Skickar du din förfrågan vardagar innan kl 12.00 så får du svar samma dag. </p>
+            <h3 class="white" style="color: #3a6ee8">Du kan även ringa oss på</h3>&nbsp;
+            <h2><a style="color: #3a6ee8" href="tel: +46704837371">+46-704837371</a></h2>
+            <h3 class="white" style="color: #3a6ee8">och få svar direkt.</h3>&nbsp;
           </div>
         </div><!-- /.col-md-5 -->
       </div><!-- /.section-content -->
