--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
       var emailBody = 'Name: ' + name + '\nEmail: ' + email + '\nMessage: ' + message;
 
-      window.location.href = 'mailto:swedishtransportservices@google.com?subject=Contact from Website&body=' + encodeURIComponent(emailBody);
+      window.location.href = 'mailto:info.swedish.transport.service@gmail.com?subject=Contact from Website&body=' + encodeURIComponent(emailBody);
     });
   </script>
 
