--- a/tillbuss.html
+++ b/tillbuss.html
@@ -182,7 +182,7 @@
                       <i class="icon ion-ios-email-outline"></i>
                     </span>
                     <span class="mm-small-box">
-                      swedishtransportservises@gmail.com<br>swedishtransportservises
+                      info.swedish.transport.service@gmail.com<br>swedishtransportservises
                     </span>
                   </li>
                   <li>
