--- a/book.html
+++ b/book.html
@@ -184,7 +184,7 @@
         ${name}
       `;
 
-      var mailtoLink = 'mailto:swedishtransportservices@gmail.com?subject=Förfrågan från ' + encodeURIComponent(name) + ' om "' + encodeURIComponent(service) + '"' + '&body=' + encodeURIComponent(emailBody);
+      var mailtoLink = 'mailto:info.swedish.transport.service@gmail.com?subject=Förfrågan från ' + encodeURIComponent(name) + ' om "' + encodeURIComponent(service) + '"' + '&body=' + encodeURIComponent(emailBody);
 
       window.location.href = mailtoLink;
     });
